重构 Match，修复 RA 平均星数不准的问题